refactor: updated profile with productId
